completes step 1
