# server/routes/movies/movies.route.js
@@ -1,0 +1,8 @@
+
+const express = require('express')
+const router = express.Router()
+const discoverController = require('../../controllers/movies/discover.controller')
+
+router.get('/movies', discoverController)
+
+module.exports = router
